--- a/chatbot/teacher/templates/media_teacher.html
+++ b/chatbot/teacher/templates/media_teacher.html
@@ -121,7 +121,7 @@
 </div>
 
 <button class="floating-button2" id="scrollToTopBtn" onclick="scrollToTop()">↑</button>
-<button class="floating-button">+</button>
+<!-- <button class="floating-button">+</button> -->
 
 <script>
     function scrollToTop() {
