--- a/chatbot/teacher/templates/media_teacher.html
+++ b/chatbot/teacher/templates/media_teacher.html
@@ -101,7 +101,7 @@
 
 <hr class="slide-in">
 
-<p class="slide-in-left">Click a container to view more.</p>
+<p class="slide-in-left">Click an album to view more</p>
 
 <br>
 
